--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
 
         <h5 class="mb-5">You can create a new post</h5>
 
-        <form action="">
+        <form action="/post" method="post">
             <textarea placeholder="What's your on mind?" class="w-1/3 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md" name=""></textarea>
             <input class="px-3 py-2 bg-blue-500 block rounded-md mt-2" type="submit" value="create new post">
         </form>
