--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,14 +18,14 @@
         <h5 class="mb-5">You can create a new post</h5>
 
         <form action="/post" method="post">
-            <textarea placeholder="What's your on mind?" class="w-1/3 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md" name=""></textarea>
+            <textarea placeholder="What's your on mind?" class="w-1/3 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md" name="content"></textarea>
             <input class="px-3 py-2 bg-blue-500 block rounded-md mt-2" type="submit" value="create new post">
         </form>
 
         <div class="posts mt-20">
             <h3 class="text-zinc-400">Your posts</h3>
             <div class="postcontainer">
-                <div class="post w-1/3 p-4 mb-2 border-2 rounded-md  border-zinc-700">
+                <div class="post w-1/3 p-4 mb-2 border-[1px] rounded-md  border-zinc-700">
                     <h4 class="text-blue-500 mb-3">@someusername</h4>
                     <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In sequi labore vitae ducimus totam ullam saepe esse aut debitis, ipsum deserunt consequatur aspernatur impedit, dignissimos iure iusto doloribus eligendi perspiciatis?</p>
                    
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div class="post w-1/3 p-4 mb-2 border-2 rounded-md  border-zinc-700">
+                <div class="post w-1/3 p-4 mb-2 border-[1px] rounded-md  border-zinc-700">
                     <h4 class="text-blue-500 mb-3">@someusername</h4>
                     <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In sequi labore vitae ducimus totam ullam saepe esse aut debitis, ipsum deserunt consequatur aspernatur impedit, dignissimos iure iusto doloribus eligendi perspiciatis?</p>
                    
